# MedScan-AI

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start.py
backend/: .env.example  .gitignore  deployment.md  implementation_plan_final  pyproject.toml  start.ps1
backend/medscan/: config.py
backend/medscan/agents/nodes/: router.py  safety_guard.py  visual_reasoning.py
backend/medscan/api/: dependencies.py  main.py
backend/medscan/api/routers/: documents.py  patients.py  payments.py  query.py
backend/medscan/db/: session.py
backend/medscan/evaluation/: evaluator.py
backend/medscan/hf/: __init__.py  base.py  doc_qa.py  image_to_text.py  object_detection.py  text_classification.py  token_classification.py  vqa.py  zero_shot.py
backend/medscan/models/: __init__.py  document.py  patient.py
backend/medscan/pipeline/: chunker.py  ingestion.py  ocr.py  vision.py
backend/medscan/tasks/: document_tasks.py
backend/scripts/: init_db.sql  seed_demo_data.py
backend/tests/: test_pipeline.py
medscan/: __init__.py  config.py  llm.py
medscan/agents/: graph.py  state.py
medscan/agents/nodes/: synthesizer.py  table_qa.py  text_rag.py
medscan/api/: main.py
medscan/api/routers/: health.py
medscan/db/: session.py
medscan/hf/: feature_extraction.py  image_classification.py  summarization.py  table_qa.py
medscan/models/: chunk.py  schemas.py
medscan/pipeline/: embedder.py  extractor.py  table_extractor.py
medscan/tasks/: celery_app.py
medscan/vector_store/: __init__.py  base.py  pgvector_store.py  pinecone_store.py
scripts/: run_evaluation.py  test_pipeline_direct.py
tests/: conftest.py  test_agents.py  test_api.py
